tests/baselines/reference/unusedFunctionsinNamespaces4.errors.txt
tests/cases/compiler/unusedFunctionsinNamespaces4.ts(3,9): error TS6133: Variable 'function1' has never been used.


==== tests/cases/compiler/unusedFunctionsinNamespaces4.ts (1 errors) ====
    
    namespace Validation {
        var function1 = function() {
            ~~~~~~~~~
!!! error TS6133: Variable 'function1' has never been used.
        }
    
        export function function2() {
    
        }
    }